# gnu_gibbon

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  config.h.in  config.rpath  configure  configure.ac  create_class.pl  download_uri  download_uri.in  gcreate_class  gcreate_class.in  gcreate_class.pl.in  gibbon-geo-ip-data.h  gibbon-geo-ip-data.h.tmpl  gibbon-geoip-data.h  gibbon-geoip-data.h.tmpl
data/: .gitignore  Makefile.am  Makefile.in  bg.Gibbon.gschema.xml.in  bg.gibbon.gschema.xml.in  gibbon-convert.1.in  gibbon.1.in  gibbon.desktop.in.in  gibbon.glade  gibbon.schemas  gibbon.schemas.in  gibbon.ui  gibbon.xml
docs/: Makefile.am
docs/reference/: Makefile.am
docs/reference/libgsgf/: .gitignore  Makefile.am  flavor-backgammon.xml  flavor-general.xml  flavors.xml  libgsgf-decl-list.txt  libgsgf-decl.txt  libgsgf-docs.xml  libgsgf-sections.txt  libgsgf.types  overview.xml
fallback/: README
help/: Makefile.am  gibbon.omf.in  gibbon.pot
help/C/: board-toolbar.page  bugreports.page  chat-area.page  chatting.page  checker-movement.page  clip-conformance.page  connect.page  contributing.page  create-account.page  create_account.page  do-not.page  do_not.page  doubling.page  droppers.page  fibs-cheat.page  game-chat-concept.page  geo-ip.page  gibbon-unicode.page  gibbon.xml  gui-overview.page  gui.page  index.page  introduction.page  invite.page  inviters-list.page  kibitz.page  main-toolbar.page  players-list.page  playing.page  reliability.page  resigning.page  rolling-dice.page  say.page  server-console.page  social-networks.page  swapping-dice.page  tell.page  unlimited-matches.page  watching-matches.page  watching.page  (+2 more)
help/de/: board-toolbar.page  bugreports.page  cannot-invite.page  chat-area.page  chatting.page  checker-movement.page  clip-conformance.page  connect.page  contributing.page  create-account.page  create_account.page  de.po  do-not.page  do_not.page  doubling.page  droppers.page  fibs-cheat.page  game-chat-concept.page  geo-ip.page  gibbon-unicode.page  gibbon.xml  gui-overview.page  gui.page  index.page  info-area.page  introduction.page  invite.page  inviters-list.page  kibitz.page  libgsgf.page  main-menu.page  main-toolbar.page  playing.page  rating.page  reliability.page  resigning.page  rolling-dice.page  say.page  server-console.page  shout.page  (+9 more)
libgsgf/: .gitignore  Makefile.am  gsgf-backgammon-match-info.c  gsgf-backgammon-match-info.h  gsgf-collection.c  gsgf-collection.h  gsgf-color.c  gsgf-color.h  gsgf-component.c  gsgf-component.h  gsgf-compose.c  gsgf-compose.h  gsgf-cooked-value.c  gsgf-cooked-value.h  gsgf-date.c  gsgf-date.h  gsgf-dates.c  gsgf-dates.h  gsgf-double.c  gsgf-double.h  gsgf-empty.c  gsgf-empty.h  gsgf-error.c  gsgf-error.h  gsgf-flavor-backgammon.c  gsgf-flavor-backgammon.h  gsgf-flavor-protected.h  gsgf-flavor.c  gsgf-flavor.h  gsgf-game-tree.c  gsgf-game-tree.h  gsgf-general-flavor.c  gsgf-general-flavor.h  gsgf-internal.h  gsgf-list-of.c  gsgf-list-of.h  gsgf-move-backgammon.c  gsgf-move-backgammon.h  gsgf-move.c  gsgf-move.h  (+39 more)
libgsgf/examples/: Makefile.am  gsgf_list_bg.c
libgsgf/tests/: .gitignore  Makefile.am  compressed-list.sgf.in  cp1251.sgf  dates.sgf  full.sgf  full.sgf.in  general-properties.sgf  gsgf-write-back.c  lib.c  linefeeds.sgf  main.c  markup-properties.sgf  move-annotation.sgf  move-properties.sgf  multi-game-tree.sgf  root-properties.sgf  setup-properties.sgf  test-compose.c  test-compressed-list.c  test-convert.c  test-date.c  test-dates.c  test-empty.c  test-formatd.c  test-full.c  test-game-info-properties.c  test-general-properties.c  test-markup-properties.c  test-minimal.c  test-misc-properties.c  test-move-annotation.c  test-move-properties.c  test-multi-game-tree.c  test-nested-game-tree.c  test-node-annotation.c  test-non-unique-points.c  test-number.c  test-real-to-string.c  test-real.c  (+15 more)
libsgf/: Makefile.am  README  gg_utils.c  gg_utils.h  sgfgen
libsvg/: Makefile.am  svg.c  svg.h  svg_ascii.c  svg_ascii.h  svg_attribute.c  svg_color.c  svg_element.c  svg_gradient.c  svg_group.c  svg_image.c  svg_length.c  svg_paint.c  svg_parser.c  svg_parser_libxml.c  svg_path.c  svg_pattern.c  svg_str.c  svg_style.c  svg_text.c  svg_transform.c  svgint.h
libsvg-cairo/: Makefile.am  svg-cairo-internal.h  svg-cairo.h  svg_cairo.c  svg_cairo_sprintf_alloc.c  svg_cairo_state.c
m4/: gcreate_class.m4
msdos/: Makefile.am  README  build-installer.sh  gibbon.iss.in  license.txt
pixmaps/: Makefile.am  default.svg.in
pixmaps/boards/: Makefile.am
pixmaps/flags/: Makefile.am
pixmaps/flags/16x16/: LICENSE  Makefile.am
pixmaps/icons/: Makefile.am
pixmaps/icons/16x16/: Makefile.am
pixmaps/icons/scalable/: Makefile.am
po/: .gitignore  LINGUAS  POTFILES.in  bg.po  de.gmo  de.po  gibbon.pot
share/: Makefile.am
share/icons/: Makefile.am
share/icons/application/: Makefile.am
share/icons/application/128x128/: Makefile.am
share/icons/application/16x16/: Makefile.am
share/icons/application/22x22/: Makefile.am
share/icons/application/24x24/: Makefile.am
share/icons/application/256x256/: Makefile.am
share/icons/application/32x32/: Makefile.am
src/: .gitignore  7point.gmd  7point.sgf  Makefile.am  Makefile.in  add-drop.gmd  complete-initial-resign.gmd  complete-opening.gmd  complete.gmd  complete.mat  complete.match  drop-black-complete.gmd  drop-white-complete.gmd  drop-white-incomplete.gmd  edited.gmd  edited.sgf  game.h  gibbon-accept.c  gibbon-accept.h  gibbon-account-dialog.c  gibbon-account-dialog.h  gibbon-action.c  gibbon-action.h  gibbon-analysis-move-record.c  gibbon-analysis-move-record.h  gibbon-analysis-move.c  gibbon-analysis-move.h  gibbon-analysis-roll.c  gibbon-analysis-roll.h  gibbon-analysis-view.c  gibbon-analysis-view.h  gibbon-app.c  gibbon-app.h  gibbon-archive.c  gibbon-archive.h  gibbon-board-editor.c  gibbon-board-editor.h  gibbon-board.c  gibbon-board.h  gibbon-cairoboard.c  (+209 more)
src/tests/: Makefile.am  test-html-entities.c
win32/: .gitignore  Makefile.am  build-installer.sh  gibbon.iss  gibbon.iss.in
(+2 files in other folders)
