noinst_LIBRARIES = libsvg.a
noinst_HEADERS = svg.h

AM_CPPFLAGS =				\
	-I$(top_srcdir)			\
	-I$(srcdir)			\
	$(GIBBON_CFLAGS)

libsvg_a_SOURCES = \
	svg.c \
	svg.h \
	svgint.h \
	svg_ascii.h \
	svg_ascii.c \
	svg_attribute.c \
	svg_color.c \
	svg_element.c \
	svg_gradient.c \
	svg_group.c \
	svg_image.c \
	svg_length.c \
	svg_paint.c \
	svg_parser.c \
	svg_pattern.c \
	svg_path.c \
	svg_str.c \
	svg_style.c \
	svg_text.c \
	svg_transform.c
